# gaia-enhanced

./: .gitignore  FORK-CHANGES.md  README-MCP.md  README-ar.md  README-cn.md  README-fa.md  README-id.md  README-ja.md  README-kr.md  README-pt.md  README-ru.md  README-tr.md  README.md  config.json  gaianet  install.sh  uninstall.sh
.github/workflows/: release.yml  validate-release.yml
.github/workflows.disabled/: build-mcp-server.yml
docs/: architecture-mcp.md  mcp-capabilities.md  mcp-remote-access.md
examples/: README.md  test-mcp.py  test-mcp.sh
mcp-gateway/: .gitignore  README.md  build.sh  go.mod  main.go
mcp-server/: Cargo.toml  README.md  mcp_config.sample.json
mcp-server/src/: main.rs
registry-service/: Cargo.toml  README.md  registry.sample.json
registry-service/src/: main.rs
scripts/: README.md  package-mcp-server.sh  patch-dashboard-mcp.sh
tests/: README.md  mcp-registry.hurl  mcp-server.hurl
